# Automatic-Meeting-Report-Generation

./: README.md  celery.dockerfile  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup-k8s.sh
alembic/: env.py
alembic/versions/: 6a9f63cbea8c_add_audio_key_and_report_key_columns_to_.py  6f6b05fb8d8f_create_jobs_table.py
app/api/: summarize.py
app/core/: config.py
app/models/: job.py
app/schemas/: langchain.py
app/services/: cache.py  celery_worker.py
app/services/conversation/: tasks.py
app/services/diarize/: tasks.py
app/services/summarize/: prompts.py  tasks.py  utils.py
app/services/transcribe/: tasks.py
app/utils/: logging.py
logging/: promtail-config.yml
manifests/: celery-deployment.yaml  flower-deployment.yaml  flower-service.yaml  ollama-deployment.yaml  ollama-service.yaml  ollamavolume-persistentvolumeclaim.yaml  redis-deployment.yaml  redis-service.yaml  web-cm.yaml  web-deployment.yaml  web-service.yaml
tests/: conftest.py  test_summarize.py
